# autocatch

./: .gitignore  LICENSE  README.md  discord_bot.py  download.py  download_poke_api.py  identify.py  pyproject.toml  requirements.txt  run.sh  train.py  transverse_imgs.py
add_poke_bot/: go.mod  main.go
imgs/: generate_smaller.py  image.py  transverse_imgs copy.py
train/: emb_train.py  identify.py  train.py
