[project]
name = "steal-poke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "discord-py-self>=2.0.1",
    "httpx>=0.28.1",
    "pip",
    "transformers>=4.57.5",
    "tqdm>=4.67.1",
    "pillow>=12.1.1",
]

# [[tool.uv.index]]
# name = "pytorch-rocm"
# url = "https://download.pytorch.org/whl/rocm6.2"
# explicit = true
#
# [tool.uv.sources]
# torchvision = [{ index = "pytorch-rocm" }]
# torchaudio = [{ index = "pytorch-rocm" }]
# pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
