[project]
name = "steal-poke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip",
    "transformers>=4.57.5",
    "tqdm>=4.67.1",
    "pillow>=12.1.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "discord-py-self>=2.1.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

# [[tool.uv.index]]
# name = "pytorch-rocm"
# url = "https://download.pytorch.org/whl/rocm6.2"
# explicit = true
#
# [tool.uv.sources]
# torchvision = [{ index = "pytorch-rocm" }]
# torchaudio = [{ index = "pytorch-rocm" }]
# pytorch-triton-rocm = [{ index = "pytorch-rocm" }]
